--- a/pages/logistics/logistics.wxml
+++ b/pages/logistics/logistics.wxml
@@ -11,17 +11,17 @@
       <!-- 判断列表中id==0并且长度小于1  已完成ICON无线 -->
       <image class='list_img' wx:if="{{item.id==0&&list.length==1}}" src='../../images/3.png'></image>
       <!-- 判断列表中id==1  灰色ICON -->
-      <image class='list_imgs' wx:if="{{item.id==1}}" src='../../images/4.png'></image>
+      <image class='list_imgs'  src='../../images/2.png'></image>
       <!-- 判断列表中id==2  灰色ICON -->
       <image class='list_imgs' wx:if="{{item.id==2}}" src='../../images/5.png'></image>
       <!-- 判断列表中id==3  飞机ICON -->
       <image class='list_img' wx:if="{{item.id==3}}" src='../../images/6.png'></image>
       <view class='list_name_page'>
         <!-- 列表名称 -->
-        <lable class='list_name'>{{item.name}}</lable>
+        <lable class='list_name'>{{item.context}}</lable>
       </view>
       <!-- 时间 -->
-      <view class='list_dates_page'>{{item.dates}}</view>
+      <view class='list_dates_page'>{{item.time}}</view>
  
     </view>
     <!-- 列表底线 -->
