--- a/pages/apply_after_sales/apply_after_sales.wxml
+++ b/pages/apply_after_sales/apply_after_sales.wxml
@@ -1,30 +1,57 @@
 <!--pages/apply_after_sales/apply_after_sales.wxml-->
   <form  bindsubmit="formSubmit" content-type="multipart/form-data">
-<view class="all" style='height:{{height}}px;'>
-    <view class="good_infor">
-        <image class="good_img" src="{{url}}{{goods.goods_image}}" mode="widthFix" ></image>
-          <text class="good_name">{{goods.parts_goods_name}}</text>  
+    <view class="all" style='height:{{height}}px;' wx:if="{{amend}}">
+        <view class="good_infor">
+            <image class="good_img" src="{{url}}{{goods.goods_image}}" mode="widthFix" ></image>
+            <text class="good_name">{{goods.parts_goods_name}}</text>  
+        </view>
+        <view class="opration">
+            <radio-group class="radio-group" bindchange="radioChange">
+                <radio value="2" checked="true"   color='#fff' />要求退货退款金额：
+                <input type="text" placeholder="" class="input_monly" disabled value="{{goods.refund_amount}}"> </input>
+                <text class="danwei">元</text>
+                <radio value="1" class="radio_b" color='#fff' />要求换货
+            </radio-group>
+        </view>
+        <view class="reason">
+            <textarea name="content" id="" class="reason_content" placeholder="请说明原因"></textarea>
+        </view>
+        <view class="uplode_img">
+            <view class="imgcontent" wx:for="{{tempFilePaths}}">
+                <image class="" src="{{item}}" mode="widthFix" lazy-load="false"  class="imgs"> </image>
+                <image class="" src="../../images/a7.png" mode="widthFix" lazy-load="false"  class="delect_img"> </image>
+            </view>
+            <image class="" src="../../images/1.png" mode="widthFix" lazy-load="false"  class="uplog" bindtap="up_img" wx:if="{{up_img_lenght}}"> </image>
+        </view>
+        <view class="btn-area">
+                <button form-type="submit" class='button-hovers'>提交</button>
+        </view>
     </view>
-    <view class="opration">
-        <radio-group class="radio-group" bindchange="radioChange">
-              <radio value="2" checked="true"   color='#fff' />要求退货退款金额：
-              <input type="text" placeholder="" class="input_monly" disabled value="{{goods.refund_amount}}"> </input>
-              <text class="danwei">元</text>
-              <radio value="1" class="radio_b" color='#fff' />要求换货
-        </radio-group>
+     <view class="all" style='height:{{height}}px;' wx:else>
+        <view class="good_infor">
+            <image class="good_img" src="{{url}}{{goods.goods_image}}" mode="widthFix" ></image>
+            <text class="good_name">{{goods.parts_goods_name}}</text>  
+        </view>
+        <view class="opration">
+            <radio-group class="radio-group" bindchange="radioChange">
+                <radio value="2" checked="true"   color='#fff' />要求退货退款金额：
+                <input type="text" placeholder="" class="input_monly" disabled value="{{goods.refund_amount}}"> </input>
+                <text class="danwei">元</text>
+                <radio value="1" class="radio_b" color='#fff' />要求换货
+            </radio-group>
+        </view>
+        <view class="reason">
+            <textarea name="content" id="" class="reason_content" placeholder="请说明原因"></textarea>
+        </view>
+        <view class="uplode_img">
+            <view class="imgcontent" wx:for="{{tempFilePaths}}">
+                <image class="" src="{{item}}" mode="widthFix" lazy-load="false"  class="imgs"> </image>
+                <image class="" src="../../images/a7.png" mode="widthFix" lazy-load="false"  class="delect_img"> </image>
+            </view>
+            <image class="" src="../../images/1.png" mode="widthFix" lazy-load="false"  class="uplog" bindtap="up_img" wx:if="{{up_img_lenght}}"> </image>
+        </view>
+        <view class="btn-area">
+                <button form-type="submit" class='button-hovers'>提交</button>
+        </view>
     </view>
-    <view class="reason">
-        <textarea name="content" id="" class="reason_content" placeholder="请说明原因"></textarea>
-    </view>
-    <view class="uplode_img">
-          <view class="imgcontent" wx:for="{{tempFilePaths}}">
-              <image class="" src="{{item}}" mode="widthFix" lazy-load="false"  class="imgs"> </image>
-              <image class="" src="../../images/a7.png" mode="widthFix" lazy-load="false"  class="delect_img"> </image>
-          </view>
-          <image class="" src="../../images/1.png" mode="widthFix" lazy-load="false"  class="uplog" bindtap="up_img" wx:if="{{up_img_lenght}}"> </image>
-    </view>
-     <view class="btn-area">
-            <button form-type="submit" class='button-hovers'>提交</button>
-     </view>
- </view>
 </form>
