--- a/aftersale/pages/aftersale_detail/aftersale_detail.wxml
+++ b/aftersale/pages/aftersale_detail/aftersale_detail.wxml
@@ -32,7 +32,7 @@
             <text wx:if="{{status==5&&whoHandle==1}}">已撤销</text>
             <text wx:elif="{{status==5&&whoHandle==2}}">已撤销</text>
             <block wx:else>
-                <text bindtap="AmendPetition" data-id="{{dataObj.order_id}}">修改申请</text>
+                <text bindtap="AmendPetition" data-id="{{dataObj.id}}">修改申请</text>
                 <text class="revoke" bindtap="revoke">撤销申请</text>
             </block>
         </view>
