--- a/pages/storage/view/view.wxml
+++ b/pages/storage/view/view.wxml
@@ -103,7 +103,7 @@
     <swiper-item class="overflowYauto">
         <scroll-view>
             <view class="swiper-box">
-                <view class="swiper-title">宣铭众筹 · 成就你我</view>
+                <view class="swiper-title">创意众筹 · 成就希望</view>
                 <swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}" previous-margin="70rpx" next-margin="70rpx" display-multiple-items='1' circular class="zc-swiper">
                     <swiper-item>
                         <view class="box">
