--- a/pages/change/change.wxss
+++ b/pages/change/change.wxss
@@ -5,6 +5,7 @@
     align-items: center;
     padding: 30rpx;
     border: 1rpx solid #E4E4E4;
+    border-top: none;
 }
 .content{
    display: flex;
