--- a/pages/integral_settlement/integral_settlement.wxml
+++ b/pages/integral_settlement/integral_settlement.wxml
@@ -100,13 +100,13 @@
 	<view class='sundry'>
 		<view class='sundry-li' style=' border-bottom: solid 1rpx #E4E4E4;'>
 			<view>商品总价</view>
-			<view><text style='color:#FF7E4A;'>{{all_money}}分</text></view>
+			<view><text style='color:#FF7E4A;'>{{all_money}}积分</text></view>
 		</view>
 	
 		
 	</view>
   <view class="repay_box">
-  <view class="moly">应付<text style='color:#7E383F;padding-left:20rpx;'>{{all_money}}分</text></view>
+  <view class="moly">应付<text style='color:#7E383F;padding-left:20rpx;'>{{all_money}}积分</text></view>
 	<view class='buts' bindtap='repay' data-id="{{goods.id}}" >立即兑换</view>
   </view>
 </view>
