--- a/pages/settlement/settlement.wxml
+++ b/pages/settlement/settlement.wxml
@@ -241,7 +241,7 @@
 	
 	<view class='sundry'>
 
-		<view class='sundry-li' style=' border-bottom: solid 1rpx #E4E4E4;'>
+		<view class='sundry-li1' style=' border-bottom: solid 1rpx #E4E4E4;'>
 			<view>商品总价</view>
 			<view><text style='color:#FF7E4A;'>{{all_money}}元</text></view>
 		</view>
