--- a/pages/change/change.wxml
+++ b/pages/change/change.wxml
@@ -20,7 +20,7 @@
                 </view>
             </view>
              <view class="list" >
-                <view class="tilte_text">上级邀请码</view>
+                <view class="tilte_text">朋友邀请码</view>
                 <view class="content">
                 
                 </view>
