--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -33,7 +33,6 @@ text-indent: 1em;
 image {
   width: 100%;
   height: 100%;
-
 }
 .nfc{
 width:50rpx;
@@ -264,4 +263,5 @@ padding: 10rpx;
   top: 50%;
   right: 0;
   width: 100rpx;
+  display: none;
 }
