--- a/pages/integral_good_detail/integral_good_detail.wxml
+++ b/pages/integral_good_detail/integral_good_detail.wxml
@@ -16,6 +16,11 @@
 		<view class='price_cont'>
 			<view >
 				<view class='sale'>积分：{{goods.integral}}/片</view>
+
+			</view>
+              	<view  style='margin-left:200px'>
+				<image src='img/u1492.png' class='footbar_ico'></image>
+				<view class='footbar_text'>分享</view>
 			</view>
 		
 		</view>
@@ -40,18 +45,23 @@
 		</view>
 	
 	</view>
+
 	<view class='footbar'>
-		<view class='ico_view'>
-			<view class='service'>
+		<view class='ico_view' style='margin-left:10px'>
+                  <view class='service' bindtap="go_index">
+			  <button class="line" ></button>
+				<image src='../../images/index.png' class='footbar_ico'></image>
+				<view class='footbar_text'>首页</view>
+</view>
+
+			<view class='service' style='margin-right:10px'>
+
 				<image src='img/u1510.png' class='footbar_ico'></image>
 				<view class='footbar_text'>客服</view>
 			</view>
-			<view class='share'>
-				<image src='img/u1492.png' class='footbar_ico'></image>
-				<view class='footbar_text'>分享</view>
-			</view>
-			
+
 		</view>
+    
 		<view class='trade'>
 			<view class='buy' bindtap="showPopup"   data-id="{{goods.id}}">立即兑换</view>
 		</view>
