--- a/pages/withdrawal/withdrawal.wxml
+++ b/pages/withdrawal/withdrawal.wxml
@@ -24,13 +24,16 @@
                         <text class="danwei">元</text>
                   </view>
                  
-                    <view class="form_list_select">
-                        <view class="form_list_text"></view>
-                      <view class="go"> 
-                          <view bindtap="go_card">选择银行卡>></view>
-                           
-                      </view>
-                  </view>
+                   <view style=' display: flex; align-items: center;position: relative;'>
+                        <view class="tip">提现手续费
+                        
+                        </view>
+                        <view style='color:red;font-size:24rpx;'>￥20</view>
+                        <view class="tip">(费率2%)
+                        </view>
+                    </view>
+                      
+       
                       
                     <view class="btn-area">
                       <button form-type="submit" class='button-hovers'>提交申请</button>
@@ -56,7 +59,13 @@
           <input type="text"   class="form_list_input"  placeholder="请输入金额，不能小于1000" name="money" />
                         <text class="danwei">元</text>
         </view>
-                 
+                  <view style=' display: flex; align-items: center;position: relative;'>
+                        <view class="tip">提现手续费
+                        </view>
+                        <view style='color:red;font-size:24rpx;'>￥20</view>
+                        <view class="tip">(费率2%)
+                        </view>
+                    </view>
                     <view class="btn-area">
                       <button form-type="submit" class='button-hovers'>提交申请</button>
                   </view>
